# millsheet-renamer-google-vision

./: .env.example  .gitignore  README.md  app.py  build.bat  index.js  main.py  millsheet_renamer.spec  package-lock.json  package.json  requirements.txt
rust-version/: .gitignore  Cargo.toml  README.md
rust-version/src/: lib.rs  main.rs
rust-version/src/gui/: app.rs  mod.rs  theme.rs
rust-version/src/parser/: date.rs  dimensions.rs  manufacturer.rs  material.rs  mod.rs
rust-version/src/pdf/: mod.rs
rust-version/src/vision/: auth.rs  client.rs  mod.rs
